@@ -59,5 +59,5 @@ returns false if
 .BR filename
 contains '..' or is too long.
 .SH "SEE ALSO"
-.BR synce (1)
+.BR synce (7)
 .BR synce_get_directory (3)
