@@ -34,4 +34,4 @@ function return a string describing the error code passed in the argument
 .SH "RETURN VALUE"
 Returns the appropriate error description string, or an "Unknown error code" message if the error number is unknown.
 .SH "SEE ALSO"
-.BR synce (1)
+.BR synce (7)
