@@ -93,4 +93,4 @@ and
 .BR b
 are equal, false otherwise..
 .SH "SEE ALSO"
-.BR synce (1)
+.BR synce (7)
