@@ -1,3 +1,8 @@
+2008-02-18  Mark Ellis  <mark@mpellis.org.uk>
+
+	* add .so man pages to 'real' pages
+	* point to synce.7, not synce.1
+
 2008-02-11  Mark Ellis  <mark@mpellis.org.uk>
 
 	* more fully populate SynceInfo with odccm & hal
